@@ -16,6 +16,8 @@ PyObjC NEWS</title>
 <li><code><span>AppKitScripting</span></code></li>
 <li><code><span>Automator</span></code></li>
 <li><code><span>CoreData</span></code></li>
+<li><code><span>DiscRecording</span></code></li>
+<li><code><span>DiscRecordingUI</span></code></li>
 <li><code><span>SyncServices</span></code></li>
 <li><code><span>XgridFoundation</span></code></li>
 </ul>
